[package]
name = "chord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahash = "4.1.0"
async-trait = "0.1.61"
mockall = "0.11.3"

log = "0.4.17"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["macros", "test-util"] }
