[package]
name = "tamto-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
chord-rs = { version = "0.1.0", path = "../chord" }
prost = "0.11.6"
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
